--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -14,6 +14,8 @@
         <img id='ship' src="img/ship.png" alt=""></div>
     <div style='display:none;'>
         <img id='rocket' src="img/rocket.png" alt=""></div>
+    <div style='display:none;'>
+        <img id='enemy' src="img/weak-enemy.png" alt=""></div>
     <canvas></canvas>
     <script src="main.js"></script>
 </body>
