--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <div style='display:none;'>
+        <img id='enRocket' src="img/enemyRocket.png" alt=""></div>
     <div style='display:none;'>
         <img id='ship' src="img/ship.png" alt=""></div>
     <div style='display:none;'>
@@ -17,6 +21,10 @@
     <div style='display:none;'>
         <img id='enemy' src="img/weak-enemy.png" alt=""></div>
     <canvas></canvas>
+    <canvas id='bars'></canvas>
+    <span id='armor'></span>
+    <span id='score'></span>
+
     <script src="main.js"></script>
 </body>
 
