--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-
+    <div id="start-game"><button id='start'>
+            <p>Start new game</p>
+        </button></div>
+    <div style='display:none;'>
+        <img id='small-asteroid' src="img/small-asteroid.png" alt=""></div>
+    <div style='display:none;'>
+        <img id='simrocket' src="img/simrocket.png" alt=""></div>
+    <div style='display:none;'>
+        <img id='sim' src="img/sim.png" alt=""></div>
+    <div style='display:none;'>
+        <img id='betterEnemyRocket' src="img/betRocket.png" alt=""></div>
+    <div style='display:none;'>
+        <img id='betterEnemy' src="img/Better-enemy.png" alt=""></div>
     <div style='display:none;'>
         <img id='enRocket' src="img/enemyRocket.png" alt=""></div>
     <div style='display:none;'>
@@ -21,7 +33,6 @@
     <div style='display:none;'>
         <img id='enemy' src="img/weak-enemy.png" alt=""></div>
     <canvas></canvas>
-    <canvas id='bars'></canvas>
     <span id='armor'></span>
     <span id='score'></span>
 
