--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -22,6 +22,13 @@
             <p>Start new game</p>
         </button></div>
     <div style='display:none;'>
+        <div style='display:none;'>
+            <img id='three' src="img/3.png" alt=""></div>
+        <img id='two' src="img/2.png" alt="">
+    </div>
+    <div style='display:none;'>
+        <img id='one' src="img/1.png" alt=""></div>
+    <div style='display:none;'>
         <img id='backg' src="img/bggg.png" alt=""></div>
     <div style='display:none;'>
         <img id='player' src="img/player.png" alt=""></div>
