--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -18,7 +18,9 @@
         </button>
     </div>
 
-    <div id="start-game"><button class='start'>
+    <div id="start-game">
+
+        <button class='start'>
             <p>Start new game</p>
         </button></div>
     <div style='display:none;'>
@@ -29,12 +31,14 @@
     <div style='display:none;'>
         <img id='one' src="img/1.png" alt=""></div>
     <div style='display:none;'>
+        <img id='boss2' src="img/boss2.png" alt=""></div>
+    <div style='display:none;'>
         <img id='backg' src="img/bggg.png" alt=""></div>
     <div style='display:none;'>
         <img id='player' src="img/player.png" alt=""></div>
     <div style='display:none;'>
         <img id='boss-rocket' src="img/boss-rocket.png" alt=""></div>
-    <div style='display:none;'>
+    <div class="c" style='display:none;'>
         <img id='boss' src="img/boss.png" alt=""></div>
     <div style='display:none;'>
         <img id='small-asteroid' src="img/small-asteroid.png" alt=""></div>
@@ -57,7 +61,7 @@
     <canvas id='background'></canvas>
     <span id='armor'></span>
     <span id='score'></span>
-    <canvas id="display" width="320" height="480"></canvas>
+    <canvas id="display" width="480" height="480"></canvas>
     <script src="main.js"></script>
 </body>
 
